added support to display open positions

--- a/HiringManager.Web/Views/Account/Register.cshtml
+++ b/HiringManager.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model HiringManager.Web.ApplicationServices.RegisterModel
+﻿@model HiringManager.DomainServices.RegisterManagerRequest
 @{
     ViewBag.Title = "Register";
 }
