--- a/HiringManager.Web/Views/Positions/Index.cshtml
+++ b/HiringManager.Web/Views/Positions/Index.cshtml
@@ -19,8 +19,8 @@
             @foreach (var item in Model.Data)
             {
                 <tr>
-                    <td>@item.Name</td>
-                    <td>@item.Created</td>
+                    <td>@item.Title</td>
+                    <td>@item.CreatedByName</td>
                     <td>@item.Status</td>
                     <td>@item.CandidatesAwaitingReview</td>
                 </tr>
