--- a/HiringManager.Web/Views/Shared/_Layout.cshtml
+++ b/HiringManager.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <!-- replace with your custom application logo -->
                     <div class="nav-collapse collapse" id="main-menu">
                         <ul class="nav" id="main-menu-left">
-                            <li class="active"><a href="@Url.Action("Index", "Home")">Positions</a></li>
+                            <li class="active"><a href="@Url.Action("Index", "Positions")">Positions</a></li>
                             <li><a href="#">Candidates</a></li>
 
                         </ul>
