Finished "Create Position" feature.

--- a/HiringManager.Web/Views/Account/Register.cshtml
+++ b/HiringManager.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model HiringManager.DomainServices.RegisterManagerRequest
+﻿@model HiringManager.Web.Models.Accounts.RegisterManagerViewModel
 @{
     ViewBag.Title = "Register";
 }
