--- a/HiringManager.Web/Views/Shared/_Layout.cshtml
+++ b/HiringManager.Web/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
+                    <p>&copy; @DateTime.Now.Year - Hiring Manager</p>
                 </div>
             </div>
         </footer>
