Implemented Pass On Candidate.

--- a/HiringManager.Web/Views/Home/Index.cshtml
+++ b/HiringManager.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <ol class="round">
     <li class="one">
         <h5>Create and view your open positions</h5>
-        Create and track your open positions. 
+        Create and track your @Html.ActionLink("open positions.", "Index", "Positions") 
     </li>
 
     <li class="two">
