--- a/HiringManager.Web/Views/Positions/Candidates.cshtml
+++ b/HiringManager.Web/Views/Positions/Candidates.cshtml
@@ -25,7 +25,7 @@
                 @foreach (var candidate in Model.Candidates)
                 {
                     <tr>
-                        <td>@candidate.Name</td>
+                        <td>@candidate.CandidateName</td>
                         <td>
                             <ul>
                                 @foreach (var contactInfo in candidate.ContactInfo)
