--- a/HiringManager.Web/Views/Shared/_Layout.cshtml
+++ b/HiringManager.Web/Views/Shared/_Layout.cshtml
@@ -10,47 +10,38 @@
         <link href="http://cdn.kendostatic.com/2013.1.514/styles/kendo.default.min.css" rel="stylesheet">          
         @Scripts.Render("~/bundles/modernizr")
     </head>
-    <body style="margin-top: 40px">
-        <div class="navbar navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container-fluid">
-                    <!-- this element supports reponsive ui -->
-                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+    <body>
+        
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </a>
-
-                    <a class="brand" href="@Url.Action("Index", "Home")">Hiring Manager</a>
-
-                    <!-- replace with your custom application logo -->
-                    <div class="nav-collapse collapse" id="main-menu">
-                        <ul class="nav" id="main-menu-left">
-                            <li class="active"><a href="@Url.Action("Index", "Positions")">Positions</a></li>
-                            <li><a href="#">Candidates</a></li>
-
-                        </ul>
-                        @Html.Partial("_LoginPartial")
-                    </div>
-
-
+                    </button>
+                    @Html.ActionLink("Hiring Manager", "Index", "Home", null, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="@Url.Action("Index", "Positions")">Positions</a></li>
+                        <li><a href="#">Candidates</a></li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
                 </div>
             </div>
-        </div>       
+        </div>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            </footer>
+        </div>
 
-        @RenderBody()
-
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - Hiring Manager</p>
-                </div>
-            </div>
-        </footer>
 
         @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/jqueryui")
-        @Scripts.Render("~/bundles/js")
+        @Scripts.Render("~/bundles/bootstrap")
         <script src="http://cdn.kendostatic.com/2013.2.716/js/kendo.all.min.js" type="text/javascript"></script>
         @RenderSection("scripts", required: false)
     </body>
