--- a/HiringManager.Web/Views/Positions/Create.cshtml
+++ b/HiringManager.Web/Views/Positions/Create.cshtml
@@ -7,29 +7,29 @@
 
 <h2>Create Position</h2>
 <div class="container-fluid span12">
-    <form class="well" action="Create" method="POST">
-        <div class="control-group">
-            @Html.LabelFor(m => m.Title)
-            @Html.TextBoxFor(m => m.Title, new {placeholder = "Position Title"})
+    <form action="Create" method="POST" class="form-horizontal">
+        <div class="form-group row">
+            @Html.LabelFor(m => m.Title, "Title", new {@class="col-xs-2 control-label"})
+            @Html.TextBoxFor(m => m.Title, new {placeholder = "Position Title", @class="form-control"})
             <span class="help-inline">*</span>
             @Html.ValidationMessageFor(m => m.Title)
         </div>
         
-        <div class="control-group">
-            @Html.LabelFor(m => m.OpenDate)
-            @Html.TextBoxFor(m => m.OpenDate, new {placeholder = "Open Date", @class="k-ui-datepicker"})
+        <div class="form-group row">
+            @Html.LabelFor(m => m.OpenDate, "Open Date", new { @class = "col-xs-2 control-label" })
+            @Html.TextBoxFor(m => m.OpenDate, new {placeholder = "Open Date", @class="k-ui-datepicker form-control"})
             <span class="help-inline">*</span>
             @Html.ValidationMessageFor(m => m.OpenDate)
         </div>
         
-        <div class="container">
+        <div class="btn-group">
             <button type="submit" class="btn btn-primary">Create</button>
-            <a href="@Url.Action("Index")" class="btn ">Cancel</a>            
+            <a href="@Url.Action("Index")" class="btn btn-default">Cancel</a>            
         </div>
     </form>    
 </div>
 
-@Html.ValidationSummary();
+@Html.ValidationSummary()
 
 @section scripts {
     <script type="text/javascript">
