--- a/HiringManager.Web/Views/Shared/_Layout.cshtml
+++ b/HiringManager.Web/Views/Shared/_Layout.cshtml
@@ -9,40 +9,26 @@
         <link href="http://cdn.kendostatic.com/2013.1.514/styles/kendo.common.min.css" rel="stylesheet">        
         <link href="http://cdn.kendostatic.com/2013.1.514/styles/kendo.default.min.css" rel="stylesheet">          
         @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
+
+
         
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    @Html.ActionLink("Hiring Manager", "Index", "Home", null, new { @class = "navbar-brand" })
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="@Url.Action("Index", "Positions")">Positions</a></li>
-                        <li><a href="#">Candidates</a></li>
-                    </ul>
-                    @Html.Partial("_LoginPartial")
-                </div>
-            </div>
-        </div>
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")
+        <script src="http://cdn.kendostatic.com/2013.2.716/js/kendo.all.min.js" type="text/javascript"></script>
+
+    </head>
+<body>
+    @Html.Partial(MVC.Shared.Views._NavBar)
+
         <div class="container body-content">
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                <p>&copy; @DateTime.Now.Year Hiring Manager powered by ISG Software Solutions</p>
             </footer>
         </div>
 
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        <script src="http://cdn.kendostatic.com/2013.2.716/js/kendo.all.min.js" type="text/javascript"></script>
         @RenderSection("scripts", required: false)
     </body>
 </html>
