--- a/HiringManager.Web/Views/Account/Register.cshtml
+++ b/HiringManager.Web/Views/Account/Register.cshtml
@@ -8,36 +8,32 @@
     <h2>Create a new account.</h2>
 </hgroup>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
+    <div class="form-group">
+        @Html.LabelFor(m => m.DisplayName)
+        @Html.TextBoxFor(m => m.DisplayName, new { placeholder="Display Name", @class="form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Title, "Title")
+        @Html.TextBoxFor(m => m.Title, new { placeholder = "Title", @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.UserName, "User Name")
+        @Html.TextBoxFor(m => m.UserName, new { placeholder = "User Name", @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Password, "Password")
+        @Html.PasswordFor(m => m.Password, new { placeholder = "Password", @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.ConfirmPassword)
+        @Html.PasswordFor(m => m.ConfirmPassword, new { placeholder = "Confirm Password", @class = "form-control" })
+    </div>
+    <input type="submit" class="btn btn-primary" value="Register" />
 
-    <fieldset>
-        <legend>Registration Form</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.DisplayName)
-                @Html.TextBoxFor(m => m.DisplayName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Title)
-                @Html.TextBoxFor(m => m.Title)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-        </ol>
-        <input type="submit" value="Register" />
-    </fieldset>
 }
 
 @section Scripts {
