--- a/HiringManager.Web/Views/Positions/AddCandidate.cshtml
+++ b/HiringManager.Web/Views/Positions/AddCandidate.cshtml
@@ -9,22 +9,22 @@
 
 <div class="container">
     <h2>Add Candidate</h2>
-    @using (@Html.BeginForm(null, null, null, FormMethod.Post, new {@class="form-horizontal"}))
+    @using (@Html.BeginForm())
     {
         @Html.HiddenFor(m => m.PositionId)
 
-        <div class="form-group row">
-            @Html.LabelFor(m => m.Name, "Name", new {@class="col-xs-1 control-label"})
+        <div class="form-group">
+            @Html.LabelFor(m => m.Name)
             @Html.TextBoxFor(m => m.Name, new {@class="form-control"})
             @Html.ValidationMessageFor(m => m.Name)
         </div>
-        <div class="form-group row">
-            @Html.LabelFor(m => m.EmailAddress, "Email", new { @class = "col-xs-1 control-label" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.EmailAddress)
             <input name="EmailAddress" type="email" value="@Model.EmailAddress" class="form-control" />
             @Html.ValidationMessageFor(m => m.EmailAddress)
         </div>
-        <div class="form-group row">
-            @Html.LabelFor(m => m.PhoneNumber, "Phone", new { @class = "col-xs-1 control-label" })
+        <div class="form-group">
+            @Html.LabelFor(m => m.PhoneNumber)
             <input name="PhoneNumber" type="tel" value="@Model.PhoneNumber" class="form-control" />
             @Html.ValidationMessageFor(m => m.PhoneNumber)
         </div>
