--- a/HiringManager.Web/Views/Positions/Candidates.cshtml
+++ b/HiringManager.Web/Views/Positions/Candidates.cshtml
@@ -6,48 +6,50 @@
 }
 
 <h2>Candidates for @Model.Title (@Model.Status)</h2>
-<div class="container-fluid span12">
-    <div class="btn-group">
-        <a href="@Url.Action("AddCandidate",new {id=Model.PositionId})" class="btn">New Candidate</a>
-    </div>
+<div class="container">
+    <table class="table table-striped table-bordered table-bordered">
+        <thead>
+            <tr>
+                <th colspan="4">
+                    <div class="btn-group">
+                        <a class="btn btn-default" href="@Url.Action("AddCandidate",new {id=Model.PositionId})" class="btn">New Candidate</a>
+                    </div>
 
-    <div class="container" >
-        <table class="table table-striped table-bordered table-bordered">
-            <thead>
+                </th>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <th>Contact Info</th>
+                <th>Status</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var candidate in Model.Candidates)
+            {
                 <tr>
-                    <th>Name</th>
-                    <th>Contact Info</th>
-                    <th>Status</th>
-                    <th></th>
+                    <td>@candidate.CandidateName</td>
+                    <td>
+                        <ul>
+                            @foreach (var contactInfo in candidate.ContactInfo)
+                            {
+                                <li>@contactInfo.Type : @contactInfo.Value</li>
+                            }
+                        </ul>
+                    </td>
+                    <td>
+                        @candidate.Status
+                    </td>
+                    <td>
+                        <div class="btn-group">
+                            <a class="btn btn-default" href="@Url.Action("Pass", new {id = candidate.CandidateStatusId})" class="btn">Pass</a>
+                            <a class="btn btn-default" href="@Url.Action("Status", new {id = candidate.CandidateStatusId})" class="btn">Set Status</a>
+                            <a class="btn btn-default" href="@Url.Action("Hire", new {id = candidate.CandidateStatusId})" class="btn">Hire</a>
+                        </div>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                @foreach (var candidate in Model.Candidates)
-                {
-                    <tr>
-                        <td>@candidate.CandidateName</td>
-                        <td>
-                            <ul>
-                                @foreach (var contactInfo in candidate.ContactInfo)
-                                {
-                                    <li>@contactInfo.Type : @contactInfo.Value</li>
-                                }
-                            </ul>
-                        </td>
-                        <td>
-                            @candidate.Status
-                        </td>
-                        <td>
-                            <div class="btn-group">
-                                <a href="@Url.Action("Pass", new {id = candidate.CandidateStatusId})" class="btn" >Pass</a>
-                                <a href="@Url.Action("Status", new {id = candidate.CandidateStatusId})" class="btn" >Set Status</a>                                
-                                <a href="@Url.Action("Hire", new {id = candidate.CandidateStatusId})" class="btn" >Hire</a>                                    
-                            </div>                
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-        
-    </div>
+            }
+        </tbody>
+    </table>
+
 </div>
