--- a/HiringManager.Web/Views/Positions/Status.cshtml
+++ b/HiringManager.Web/Views/Positions/Status.cshtml
@@ -6,28 +6,26 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<div class="container-fluid span12">
-    @using (Html.BeginForm())
-    {
-        @Html.HiddenFor(m => m.PositionId)
-        @Html.HiddenFor(m => m.CandidateStatusId)
-        <div class="container-fluid">
-            <div class="control-group">
-                @Html.LabelFor(m => m.PositionTitle)
-                @Html.DisplayFor(m => m.PositionTitle)
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.CandidateName)
-                @Html.DisplayFor(m => m.CandidateName)            
-            </div>
-            <div class="control-group">
-                @Html.LabelFor(m => m.Status)
-                @Html.TextBoxFor(m => m.Status)
-            </div>
-        </div>
-        <div class="btn-group">
-            <button type="submit" class="btn btn-primary">Ok</button>
-            <a href="@Url.Action("Candidates", new {id=Model.PositionId})" class="btn">Cancel</a>
-        </div>
-    } 
-</div>
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(m => m.PositionId)
+    @Html.HiddenFor(m => m.CandidateStatusId)
+    <div class="form-group">
+        @Html.LabelFor(m => m.PositionTitle)
+        <br/>
+        @Html.DisplayFor(m => m.PositionTitle, new { placeholder = "Position Title"})
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.CandidateName)
+        <br/>
+        @Html.DisplayFor(m => m.CandidateName, new { placeholder = "Candidate Name"})         
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Status)
+        @Html.TextBoxFor(m => m.Status, new { placeholder = "Status", @class = "form-control" })
+    </div>
+    <div class="btn-group">
+        <button type="submit" class="btn btn-primary">Ok</button>
+        <a href="@Url.Action("Candidates", new {id=Model.PositionId})" class="btn">Cancel</a>
+    </div>
+} 
