--- a/HiringManager.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HiringManager.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HiringManager.DomainServices
+@using HiringManager.DomainServices.Authentication
 @using Microsoft.AspNet.Identity
 @if (Request.IsAuthenticated)
 {
