#10, Adding a Help section and displaying site version info.

--- a/HiringManager.Web/Views/Shared/_NavBar.cshtml
+++ b/HiringManager.Web/Views/Shared/_NavBar.cshtml
@@ -40,6 +40,10 @@
                 </li>
                 <li id="nav-bar-area-candidates"><a href="#">Candidates</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>@Html.ActionLink("Help", MVC.HelpPage.Help.Index())</li>
+            </ul>
+
             @Html.Partial("_LoginPartial")
         </div>
     </div>
