--- a/HiringManager.Web/Views/Shared/_NavBar.cshtml
+++ b/HiringManager.Web/Views/Shared/_NavBar.cshtml
@@ -41,7 +41,12 @@
                 <li id="nav-bar-area-candidates"><a href="#">Candidates</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li>@Html.ActionLink("Help", MVC.HelpPage.Help.Index())</li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown">Help <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>@Html.ActionLink("About", MVC.Home.About())</li>                        
+                    </ul>
+                </li>
             </ul>
 
             @Html.Partial("_LoginPartial")
