#12, adding integration tests * updated ninject * adding SourceId and Name mappings

--- a/HiringManager.Web/Views/Positions/Candidates.cshtml
+++ b/HiringManager.Web/Views/Positions/Candidates.cshtml
@@ -47,9 +47,13 @@
                     <td>
                         @if (@candidate.SourceId.HasValue)
                         {
-                            @Html.ActionLink(@candidate.Source, MVC.Sour)
+                            @Html.ActionLink(@candidate.Source, MVC.Source.Details(@candidate.SourceId.Value))
                         }
-                        @candidate.Source
+                        else
+                        {
+                            <span>unknown</span>
+                        }
+                        
                     </td>
                     <td>
                         @{
