--- a/HiringManager.Web/Views/Positions/Candidates.cshtml
+++ b/HiringManager.Web/Views/Positions/Candidates.cshtml
@@ -10,7 +10,7 @@
     <table class="table table-striped table-bordered table-bordered">
         <thead>
             <tr>
-                <th colspan="4">
+                <th colspan="5">
                     <div class="btn-group">
                         @{
                             var canAdd = Model.CanAddCandidate ? "" : "disabled";
@@ -27,7 +27,7 @@
                 <th>Contact Info</th>
                 <th>Status</th>
                 <th>Source</th>
-                <th></th>
+                <th>@Model.OpeningsFilled of @Model.Openings filled</th>
             </tr>
         </thead>
         <tbody>
@@ -51,7 +51,7 @@
                         }
                         else
                         {
-                            <span>unknown</span>
+                            <span>(none)</span>
                         }
                         
                     </td>
