--- a/HiringManager.Web/Views/Candidate/Edit.cshtml
+++ b/HiringManager.Web/Views/Candidate/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model HiringManager.EntityModel.Candidate
+﻿@model HiringManager.Web.ViewModels.Candidates.EditCandidateViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -6,32 +6,7 @@
 
 <h2>Edit</h2>
 
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Candidate</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.CandidateId)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name)
-                @Html.ValidationMessageFor(model => model.Name)
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
+@Html.Partial(MVC.Candidate.Views._EditForm)
 
 <div>
     @Html.ActionLink("Back to List", "Index")
