--- a/HiringManager.Web/Views/Candidate/_EditForm.cshtml
+++ b/HiringManager.Web/Views/Candidate/_EditForm.cshtml
@@ -4,25 +4,22 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Candidate</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.CandidateId)
+    @Html.ValidationSummary(true)
+    @Html.HiddenFor(model => model.CandidateId)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name)
-                @Html.ValidationMessageFor(model => model.Name)
-            </div>
-        </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.Name, new { @class = "control-label" })
+        @Html.TextBoxFor(model => model.Name, new {@class="form-control"})
+        @Html.ValidationMessageFor(model => model.Name)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.SourceId, new {@class="control-label"})
+        @Html.DropDownListFor(m => m.SourceId, Model.Sources, "Where did you hear about this candidate?", new {@class="form-control"})
+        @Html.ValidationMessageFor(model => model.SourceId)
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+    <div class="form-group">
+        <input type="submit" value="Save" class="btn btn-default" />
     </div>
 }
 
